Fix white space between section tiles

--- a/style4-2-Main-About-Services.css
+++ b/style4-2-Main-About-Services.css
@@ -9,10 +9,19 @@
     width: 65%;
 }
 
-/* --- Hide horizontal white space between sections --*/
+/* --- Hide horizontal white space between sections ---*/
 section {
     margin-top: -0.4rem;
 }
+
+.services-img-tile {
+    margin-top: 0.15rem;
+}
+
+.about-img-tile {
+    margin-left: -0.05rem;
+}
+/* --- Hide horizontal+vertical white space between sections ---*/
 
 .projects h2 {
     width: 80%;
